.provarCaches/00D410000011HE0EAM/objects/rstk__icshrtdemand__c.object
<CustomObject>
    <description>icshrtdemand__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__icshrtdemand_icshrthdr__r.rstk__icshrthdr_icshrtlist__r.rstk__icshrtlist_genopt__c &amp; &apos;_&apos; &amp; 
rstk__icshrtdemand_icshrthdr__r.rstk__icshrthdr_icshrtlist__r.rstk__icshrtlist_usrno__r.Name &amp; &apos;_&apos; &amp; 
rstk__icshrtdemand_icshrthdr__r.rstk__icshrthdr_icshrtlist__r.rstk__icshrtlist_div__r.rstk__sydiv_div__c &amp; &apos;_&apos; &amp; 
rstk__icshrtdemand_icshrthdr__r.rstk__icshrthdr_icshrtlist__r.rstk__icshrtlist_site__r.rstk__sysite_site__c &amp; &apos;_&apos; &amp; 
TEXT( rstk__icshrtdemand_dtereqd__c ) &amp; &apos;_&apos; &amp;  
rstk__icshrtdemand_icshrthdr__r.rstk__icshrthdr_item__r.rstk__icitem_item__r.rstk__peitem_item__c &amp; &apos;_&apos; &amp;
IF(ISBLANK(rstk__icshrtdemand_icshrthdr__r.rstk__icshrthdr_proj__c), &apos;NOPROJ_&apos;, rstk__icshrtdemand_icshrthdr__r.rstk__icshrthdr_proj__r.rstk__pjproj_proj__c) &amp; 
&apos;_&apos; &amp; rstk__icshrtdemand_ordno__c &amp; &apos;_&apos; &amp; TEXT( rstk__icshrtdemand_ordlne__c ) &amp; &apos;_&apos; &amp;  rstk__icshrtdemand_ordtyp__c &amp; &apos;_&apos; &amp;  
TEXT(NOW())</formula>
        <inlineHelpText>This is an internal system field used to define the external ID of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>IF(LEN(rstk__icshrtdemand_icshrthdr__r.Name)&gt; 70, LEFT(rstk__icshrtdemand_icshrthdr__r.Name, 70), rstk__icshrtdemand_icshrthdr__r.Name) &amp; &apos;_dmd_&apos; &amp; rstk__icshrtdemand_seq__c</formula>
        <inlineHelpText>Internal formula for constructing the associated name field.</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icshrtdemand_dtereqd__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icshrtdemand_icshrthdr__c</fullName>
        <inlineHelpText>Shortage Demand Header</inlineHelpText>
        <label>icshrthdr</label>
        <referenceTo>rstk__icshrthdr__c</referenceTo>
        <relationshipName>icshrtdemands</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__icshrtdemand_ordlne__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>order Line</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icshrtdemand_ordno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icshrtdemand_ordtyp__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icshrtdemand_qtyoutstdg__c</fullName>
        <inlineHelpText>Qty Outstanding</inlineHelpText>
        <label>Qty Outstdg</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icshrtdemand_qtyreq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty Required</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icshrtdemand_seq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sequence Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Shortage Report Demand</label>
    <nameField>
        <label>icshrtdemand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shortage Report Demands</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>